--- a/rawplay/Makefile
+++ b/rawplay/Makefile
@@ -7,10 +7,10 @@ include $(SAMPLE_DIR)/base.mak
 #===============================================================================
 # local variable
 #===============================================================================
-SAMPLE_IMAGES := sample_hdmi
-
-DEPEND_LIBS := -lhi_common -lhi_msp -ldl
+SAMPLE_IMAGES := sample_rawplay
 
 COMMON_OBJS := $(COMMON_SRCS:%.c=%.o)
+
+DEPEND_LIBS := -lhi_common -lhi_msp -ldl
 
 include $(SAMPLE_DIR)/hi_sample_rules.mak
